--- a/src/components/views/LoginPage/style.css
+++ b/src/components/views/LoginPage/style.css
@@ -14,6 +14,17 @@
   }
 }
 
-.login.template {
-  background-color: white;
+.dropbox-icon-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px; /* Adjust margin-bottom as needed */
+}
+
+.dropbox-icon {
+  margin-right: 25px; /* Adjust margin-right as needed */
+}
+
+.logo-text {
+  font-size: 40px; /* Adjust font-size as needed */
+  font-weight: bolder; /* Make the text bold */
 }
